loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:1: error: Missing closing brace `}' assumed here
for (i <- 1 to 7) {
^LoopFor:1: error: Missing closing brace `}' assumed here
for (i <- 1 to 7) {
^LoopFor:1: error: expected class or object definition
for (i <- 1 to 7) {
^